--- a/QQImplDLL/UsageExample/c++/QQOcrUsage/QQOcrUsage.vcxproj
+++ b/QQImplDLL/UsageExample/c++/QQOcrUsage/QQOcrUsage.vcxproj
@@ -89,7 +89,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;NOMINMAX;_CRT_SECURE_NO_WARNINGS;WIN32_LEAN_AND_MEAN;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;NOMINMAX;_CRT_SECURE_NO_WARNINGS;_WECHATOCRUSAGE_VCXPROJ;WIN32_LEAN_AND_MEAN;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>..\..\..\..\..\..\..\cppx\cppx\include;..\..\..\..\..\..\..\note\infai\fastocr\RapidOcrNcnn\opencv-static\opencv-4.6.0-windows-vs2019-md-debug\windows-x86\include;..\..\..\..\..\3rdparty\protobuf-3.11.2\win32\include;$(ProjectDir)..\..\..\QQOcr\depends\ocr_protobuf;$(ProjectDir)..\..\..\QQOcr\QQOcr;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
@@ -108,7 +108,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;NOMINMAX;_CRT_SECURE_NO_WARNINGS;WIN32_LEAN_AND_MEAN;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;NOMINMAX;_CRT_SECURE_NO_WARNINGS;_WECHATOCRUSAGE_VCXPROJ;WIN32_LEAN_AND_MEAN;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>..\..\..\..\..\..\..\cppx\cppx\include;..\..\..\..\..\..\..\note\infai\fastocr\RapidOcrNcnn\opencv-static\windows-x86\include;..\..\..\..\..\3rdparty\protobuf-3.11.2\win32\include;$(ProjectDir)..\..\..\QQOcr\depends\ocr_protobuf;$(ProjectDir)..\..\..\QQOcr\QQOcr;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
@@ -127,7 +127,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;NOMINMAX;_CRT_SECURE_NO_WARNINGS;WIN32_LEAN_AND_MEAN;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_CONSOLE;NOMINMAX;_CRT_SECURE_NO_WARNINGS;_WECHATOCRUSAGE_VCXPROJ;WIN32_LEAN_AND_MEAN;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>..\..\..\..\..\..\..\cppx\cppx\include;..\..\..\..\..\..\..\note\infai\fastocr\RapidOcrNcnn\opencv-static\opencv-4.6.0-windows-vs2019-md-debug\windows-x64\include;..\..\..\..\..\3rdparty\protobuf-3.11.2\win64\include;$(ProjectDir)..\..\..\QQOcr\depends\ocr_protobuf;$(ProjectDir)..\..\..\QQOcr\QQOcr;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
@@ -146,7 +146,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;_CONSOLE;NOMINMAX;_CRT_SECURE_NO_WARNINGS;WIN32_LEAN_AND_MEAN;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;_CONSOLE;NOMINMAX;_CRT_SECURE_NO_WARNINGS;_WECHATOCRUSAGE_VCXPROJ;WIN32_LEAN_AND_MEAN;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>..\..\..\..\..\..\..\cppx\cppx\include;..\..\..\..\..\..\..\note\infai\fastocr\RapidOcrNcnn\opencv-static\windows-x64\include;..\..\..\..\..\3rdparty\protobuf-3.11.2\win64\include;$(ProjectDir)..\..\..\QQOcr\depends\ocr_protobuf;$(ProjectDir)..\..\..\QQOcr\QQOcr;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
